--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -5,5 +5,5 @@
 
 @import '0-variables/variables-dir'
 @import '1-plugins/plugins-dir'
-@import '2-base/base'
+@import '2-base/base_dir'
 @import '3-modules/modules-dir'
