--- a/styles/sass/0-variables/_colors.sass
+++ b/styles/sass/0-variables/_colors.sass
@@ -1,11 +1,14 @@
 //Main
 $primary: #2322F9;
+$primary-light: #3938fa;
+$primary-dark: #201fe0;
 $light-background: #FDFDFE;
 $white: #FFFFFF;
 $dark: #09142E;
 $light-grey: #F4F7F9;
 $solid-grey: #F5F7FA;
 $grey: #E2EAED;
+$dark-grey: #E1EAED;
 $orange: #FEAA25;
 $yellow: #FFCC26;
 
