--- a/styles/sass/2-base/_reset.sass
+++ b/styles/sass/2-base/_reset.sass
@@ -2,7 +2,9 @@
   margin: 0
   padding: 0
   box-sizing: border-box
-  vertical-align: baseline
 
 ol, ul 
 	list-style: none
+
+a
+    text-decoration: none
