Added navigation links, fixed z-index issues.

--- a/styles/sass/2-base/_common.sass
+++ b/styles/sass/2-base/_common.sass
@@ -18,3 +18,10 @@
     &:hover
         color: $primary-dark
         +ease-in-out(0.3s)
+
+.nav-link
+    color: $font-primary
+
+    &:hover
+        opacity: 0.8
+        +ease-in-out(0.3s)
