Features section added

--- a/styles/sass/2-base/_common.sass
+++ b/styles/sass/2-base/_common.sass
@@ -25,3 +25,24 @@
     &:hover
         opacity: 0.8
         +ease-in-out(0.3s)
+
+.icon-container
+    display: inline-block
+    padding: 1rem
+    height: 80px
+    width: 80px
+    border-radius: 50%
+
+.pale-red
+    background-color: $pale-red
+.pale-blue
+    background-color: $pale-blue
+.pale-green
+    background-color: $pale-green
+
+.red-text
+    color: $font-red
+.blue-text
+    color: $font-blue
+.green-text
+    color: $font-green
