Jackpots section added

--- a/styles/sass/0-variables/_colors.sass
+++ b/styles/sass/0-variables/_colors.sass
@@ -9,6 +9,7 @@ $light-grey: #F4F7F9;
 $solid-grey: #F5F7FA;
 $grey: #E2EAED;
 $dark-grey: #E1EAED;
+$original-grey: #d5d5d5;
 $orange: #FEAA25;
 $yellow: #FFCC26;
 
