--- a/styles/sass/3-modules/index/_features.sass
+++ b/styles/sass/3-modules/index/_features.sass
@@ -1,6 +1,6 @@
 .features-container
     max-width: $max-width
-    margin: 10rem auto
+    margin: 10rem auto 0 auto
     display: flex
     justify-content: space-around
 
