Added more-features section, adjusted width & small tweaks.

--- a/styles/sass/0-variables/_document.sass
+++ b/styles/sass/0-variables/_document.sass
@@ -1,13 +1,13 @@
 //Fonts
 $font-xl: 3rem
-$font-lg: 2.5rem
+$font-lg: 2rem
 $font-reg: 1rem
 $font-sm: 0.9rem
 $font-xs: 0.5rem
 
 //Document Properties
 $max-width: 1200px
-
+$condensed-width: 1000px
 //Z-Indexes
 $z-front: 999
 $z-top: 1
