--- a/styles/sass/3-modules/index/_jackpots.sass
+++ b/styles/sass/3-modules/index/_jackpots.sass
@@ -1,17 +1,17 @@
 .jackpots-container
-    max-width: $max-width
+    max-width: $condensed-width
     margin: 5rem auto
     display: flex
-    justify-content: space-around
+    justify-content: space-evenly
     align-items: center
     &--main
         h1
-            font-size: 2.5rem;
-            width: 450px
+            font-size: $font-lg;
+            width: 350px
     &--vertical-line
         background-color: $original-grey
         width: 2px;
-        height: 160px;
+        height: 150px;
         border-radius: 2rem
     &--details
         p
