Added latest code-integration seciton.

--- a/styles/sass/3-modules/index/_navigation.sass
+++ b/styles/sass/3-modules/index/_navigation.sass
@@ -11,3 +11,5 @@
             margin-right: 2rem
             &:last-child
                 margin-right: 0
+        .primary-button
+            margin-top: -1rem
