--- a/styles/sass/2-base/_common.sass
+++ b/styles/sass/2-base/_common.sass
@@ -5,7 +5,6 @@
     padding: 0.8rem 1.8rem
     border: none
     border-radius: 5rem
-    margin-top: -1rem
     cursor: pointer
 
     &:hover
@@ -46,3 +45,6 @@
     color: $font-blue
 .green-text
     color: $font-green
+
+.horizontal-line
+    border: 1px solid $dark-grey
