Why choose us section added.

--- a/styles/sass/2-base/_common.sass
+++ b/styles/sass/2-base/_common.sass
@@ -38,6 +38,10 @@
     background-color: $pale-blue
 .pale-green
     background-color: $pale-green
+.pale-olive
+    background-color: $pale-olive
+.pale-yellow
+    background-color: $pale-yellow
 
 .red-text
     color: $font-red
@@ -48,3 +52,8 @@
 
 .horizontal-line
     border: 1px solid $dark-grey
+
+.large-head-h2
+    font-size: $font-lg
+    line-height: 2.5rem
+    margin-bottom: 1rem
