Ultimate features section added.

--- a/styles/sass/3-modules/index/_why-choose.sass
+++ b/styles/sass/3-modules/index/_why-choose.sass
@@ -15,6 +15,7 @@
          width: 650px
 
 .why-choose-details-container
+    max-width: $condensed-width
     display: flex
     justify-content: space-evenly
     text-align: center
