--- a/styles/sass/0-variables/_document.sass
+++ b/styles/sass/0-variables/_document.sass
@@ -8,6 +8,7 @@ $font-xs: 0.5rem
 //Document Properties
 $max-width: 1200px
 $condensed-width: 1000px
+$tight-width: 900px
 //Z-Indexes
 $z-front: 999
 $z-top: 1
