--- a/styles/sass/0-variables/_colors.sass
+++ b/styles/sass/0-variables/_colors.sass
@@ -5,11 +5,13 @@ $primary-dark: #201fe0;
 $light-background: #FDFDFE;
 $white: #FFFFFF;
 $dark: #09142E;
+$light-dark: #263043;
 $light-grey: #F4F7F9;
 $solid-grey: #F5F7FA;
 $grey: #E2EAED;
 $dark-grey: #E1EAED;
 $original-grey: #d5d5d5;
+$footer-grey: #5F636E
 $orange: #FEAA25;
 $yellow: #FFCC26;
 
