--- a/styles/sass/2-base/_common.sass
+++ b/styles/sass/2-base/_common.sass
@@ -24,7 +24,18 @@
     &:hover
         opacity: 0.8
         +ease-in-out(0.3s)
-
+.footer-link
+    color: $white
+    font-weight: bold
+    &:hover
+        opacity: 0.8
+        +ease-in-out(0.3s)
+.footer-social-link
+    color: $light-dark
+    font-size: 1.5rem
+    &:hover
+        color: $white
+        +ease-in-out(0.3s)
 .icon-container
     display: inline-block
     padding: 1rem
