Pricing table added.

--- a/styles/sass/0-variables/_misc.sass
+++ b/styles/sass/0-variables/_misc.sass
@@ -1,3 +1,4 @@
 //Animations and transitions
 =ease-in-out($duration)
+    -webkit-transition: all $duration ease-in-out
     transition: all $duration ease-in-out
