--- a/styles/sass/3-modules/index/_pricing.sass
+++ b/styles/sass/3-modules/index/_pricing.sass
@@ -101,7 +101,7 @@
         -moz-box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
 
         .rate
-            padding: 1rem 2rem
+            padding: 2rem
             background: rgb(2,0,36)
             background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(244,247,249,1) 100%)
             width: 250px
