Fixed pricing border.

--- a/styles/sass/3-modules/index/_pricing.sass
+++ b/styles/sass/3-modules/index/_pricing.sass
@@ -102,6 +102,7 @@
 
         .rate
             padding: 2rem
+            border-radius: 0.5rem
             background: rgb(2,0,36)
             background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(244,247,249,1) 100%)
             width: 250px
