Fixed card shadows and credits

--- a/styles/sass/3-modules/index/_pricing.sass
+++ b/styles/sass/3-modules/index/_pricing.sass
@@ -96,9 +96,6 @@
     &--card
         background-color: $white
         border-radius: 0.5rem
-        box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
-        -webkit-box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
-        -moz-box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
 
         .rate
             padding: 2rem
@@ -138,3 +135,8 @@
     .premium
         margin-left: 2rem
         border: 1px solid $dark-grey
+        
+    .card-shadow
+        box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
+        -webkit-box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
+        -moz-box-shadow: 2px 22px 48px -1px rgba(213,213,213,0.75)
