Fixed price table heights.

--- a/styles/sass/3-modules/index/_pricing.sass
+++ b/styles/sass/3-modules/index/_pricing.sass
@@ -96,7 +96,7 @@
     &--card
         background-color: $white
         border-radius: 0.5rem
-
+        align-self: flex-start
         .rate
             padding: 2rem
             border-radius: 0.5rem
@@ -131,7 +131,7 @@
                     margin-bottom: 2.5rem
                 &:last-child
                     margin-top: 2rem
-                    margin-bottom: 2rem
+                    margin-bottom: 3rem
     .premium
         margin-left: 2rem
         border: 1px solid $dark-grey
